--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     docker:
       - image: cimg/openjdk:11.0
         environment:
-          TEST_DATABASE_URL: postgresql://postgres@localhost/circle_test
+          TEST_DATABASE_URL: postgresql://postgres@localhost/events_db
 
       - image: cimg/postgres:14.2
     # Add steps to the job
@@ -28,13 +28,10 @@ jobs:
       - run: whoami
       - run: |
           psql \
-          -c "CREATE DATABASE event_db
           -d $TEST_DATABASE_URL \
-          -c "CREATE TABLE test (name char(25));"
       - run: |
           psql \
           -d $TEST_DATABASE_URL \
-          -c "INSERT INTO test VALUES ('John'), ('Joanna'), ('Jennifer');"
       - run:
           name: Build
           command: mvn -B -DskipTests clean package
