Configured environment variables for PostgreSQL-DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Datasource
-spring.datasource.url= jdbc:postgresql://localhost:5432/events_db
-spring.datasource.username= postgres
-spring.datasource.password= 123
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 #JPA properties
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
